added github logo which redirects to the github repo of the current project

--- a/index.html
+++ b/index.html
@@ -28,6 +28,16 @@
     <div class="vshome">
       <img src="utilities/vscode_screen.png" alt="vs code home screen" />
     </div>
+    <div class="github">
+      <a
+        href="https://github.com/RishabhDevbanshi/Windows-11-UI-Clone"
+        target="_blank"
+        rel="noopener noreferrer"
+        ><img src="utilities/github.png" alt="github icon"
+      /></a>
+
+      <p id="git-text">GitHub Repo</p>
+    </div>
     <div class="googlehome">
       <img src="utilities/google-homepage.png" alt="google-homepage" />
     </div>
