--- a/index.html
+++ b/index.html
@@ -29,17 +29,21 @@
       <img src="utilities/vscode_screen.png" alt="vs code home screen" />
     </div>
     <div class="github">
-      <a
-        href="https://github.com/RishabhDevbanshi/Windows-11-UI-Clone"
-        target="_blank"
-        rel="noopener noreferrer"
-        ><img src="utilities/github.png" alt="github icon"
-      /></a>
+      <img src="utilities/github.png" alt="github icon" />
 
       <p id="git-text">GitHub Repo</p>
     </div>
-    <div class="googlehome">
-      <img src="utilities/google-homepage.png" alt="google-homepage" />
+    <div class="gfg">
+      <img src="utilities/gfg.png" alt="gfg icon" />
+    </div>
+    <div id="gfg-text">
+      <p>GeeksForGeeks</p>
+    </div>
+    <div class="codepen">
+      <img src="utilities/codepen3.png" alt="codepen icon">
+    </div>
+    <div id="codepen-text">
+      <p>CodePen</p>
     </div>
     <div class="taskbar">
       <img src="utilities/icons.PNG" alt="taskbar image" />
